--- a/contracts/package.json
+++ b/contracts/package.json
@@ -44,5 +44,8 @@
     "hardhat": "^2.19.0",
     "solhint": "^3.6.2",
     "solhint-plugin-prettier": "^0.0.5"
+  },
+  "dependencies": {
+    "@consensys/linea-sdk": "^0.1.6"
   }
 }
