--- a/explorer/package.json
+++ b/explorer/package.json
@@ -23,6 +23,7 @@
   },
   "dependencies": {
     "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-tooltip": "^1.0.7",
     "@tanstack/react-table": "^8.10.7",
     "@verax-attestation-registry/verax-sdk": "workspace:^",
     "class-variance-authority": "^0.7.0",
